--- a/stories/index.html
+++ b/stories/index.html
@@ -5253,6 +5253,12 @@
       <td><a name="tr0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0072</td>
+      <td><a href="/stories/tr/0072_bal-kuşunun-intikamı-_slides.html" target="_blank">Bal kuşunun intikamı</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/tr/0087_okumayı-seviyorum_slides.html" target="_blank">Okumayı Seviyorum!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5301,6 +5307,12 @@
       <td><a name="tr0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0210</td>
+      <td><a href="/stories/tr/0210_tingi-ve-inekler_slides.html" target="_blank">Tingi ve inekler</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0231</td>
       <td><a href="/stories/tr/0231_hava-durumu-kitabı_slides.html" target="_blank">Hava Durumu Kitabı</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5323,6 +5335,12 @@
       <td><a href="/stories/tr/0302_ateş_slides.html" target="_blank">Ateş</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="/stories/tr/0327_hayvan-sayımı_slides.html" target="_blank">Hayvan sayımı</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -5899,7 +5917,7 @@
       <td>0072</td>
       <td><a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">The Honeyguide’s revenge</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#nn0072">nn</a>, <a href="#no0072">no</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
+      <td><a href="#ar0072">ar</a>, <a href="#es0072">es</a>, <a href="#fa0072">fa</a>, <a href="#it0072">it</a>, <a href="#ko0072">ko</a>, <a href="#nn0072">nn</a>, <a href="#no0072">no</a>, <a href="#pa0072">pa</a>, <a href="#pl0072">pl</a>, <a href="#ru0072">ru</a>, <a href="#tl0072">tl</a>, <a href="#tr0072">tr</a>, <a href="#ur0072">ur</a>, <a href="#yue0072">yue</a>, <a href="#zh0072">zh</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -6145,7 +6163,7 @@
       <td>0210</td>
       <td><a href="http://africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0210">ar</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ko0210">ko</a>, <a href="#nn0210">nn</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
+      <td><a href="#ar0210">ar</a>, <a href="#de0210">de</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ko0210">ko</a>, <a href="#nn0210">nn</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#pl0210">pl</a>, <a href="#tl0210">tl</a>, <a href="#tr0210">tr</a>, <a href="#ur0210">ur</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -6325,7 +6343,7 @@
       <td>0327</td>
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#nn0327">nn</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#nn0327">nn</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#tr0327">tr</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
     </tr>
     <tr>
       <td>0329</td>
