--- a/stories/index.html
+++ b/stories/index.html
@@ -5319,6 +5319,12 @@
       <td><a name="tr0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0158</td>
+      <td><a href="/stories/tr/0158_horoz-ve-kartal_slides.html" target="_blank">Horoz ve Kartal</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/tr/0210_tingi-ve-inekler_slides.html" target="_blank">Tingi ve inekler</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5365,6 +5371,12 @@
       <td><a href="/stories/tr/0327_hayvan-sayımı_slides.html" target="_blank">Hayvan sayımı</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/tr/0337_mum-çocuklar_slides.html" target="_blank">Mum çocuklar</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0342</td>
@@ -6133,7 +6145,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#nn0158">nn</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#nn0158">nn</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#pl0158">pl</a>, <a href="#tl0158">tl</a>, <a href="#tr0158">tr</a>, <a href="#ur0158">ur</a>, <a href="#yue0158">yue</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -6391,7 +6403,7 @@
       <td>0337</td>
       <td><a href="http://africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0337">ar</a>, <a href="#de0337">de</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#it0337">it</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#pl0337">pl</a>, <a href="#tl0337">tl</a>, <a href="#ur0337">ur</a>, <a href="#vi0337">vi</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
+      <td><a href="#ar0337">ar</a>, <a href="#de0337">de</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#it0337">it</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#pl0337">pl</a>, <a href="#tl0337">tl</a>, <a href="#tr0337">tr</a>, <a href="#ur0337">ur</a>, <a href="#vi0337">vi</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
     </tr>
     <tr>
       <td>0341</td>
