--- a/stories/index.html
+++ b/stories/index.html
@@ -5325,6 +5325,12 @@
       <td><a name="tr0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/tr/0201_eşek-çocuk_slides.html" target="_blank">Eşek Çocuk</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/tr/0210_tingi-ve-inekler_slides.html" target="_blank">Tingi ve inekler</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5361,6 +5367,12 @@
       <td><a name="tr0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0291</td>
+      <td><a href="/stories/tr/0291_vusinin-ablası-ne-demiş_slides.html" target="_blank">Vusi’nin ablası ne demiş</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0296</td>
       <td><a href="/stories/tr/0296_muz-satıcısı-tom_slides.html" target="_blank">Muz satıcısı Tom</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5371,6 +5383,12 @@
       <td><a href="/stories/tr/0302_ateş_slides.html" target="_blank">Ateş</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="tr0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/tr/0324_evden-ayrılıp-şehre-gittiğim-gün_slides.html" target="_blank">Evden ayrılıp şehre gittiğim gün</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXJHQjNEY1JkdlU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tr0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -6193,7 +6211,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ja0201">ja</a>, <a href="#ko0201">ko</a>, <a href="#nn0201">nn</a>, <a href="#no0201">no</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ja0201">ja</a>, <a href="#ko0201">ko</a>, <a href="#nn0201">nn</a>, <a href="#no0201">no</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#tr0201">tr</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -6313,7 +6331,7 @@
       <td>0291</td>
       <td><a href="http://africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ja0291">ja</a>, <a href="#ko0291">ko</a>, <a href="#nn0291">nn</a>, <a href="#no0291">no</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ja0291">ja</a>, <a href="#ko0291">ko</a>, <a href="#nn0291">nn</a>, <a href="#no0291">no</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#tr0291">tr</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
@@ -6385,7 +6403,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#de0324">de</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ja0324">ja</a>, <a href="#ko0324">ko</a>, <a href="#nn0324">nn</a>, <a href="#no0324">no</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#de0324">de</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ja0324">ja</a>, <a href="#ko0324">ko</a>, <a href="#nn0324">nn</a>, <a href="#no0324">no</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#tr0324">tr</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
