--- a/stories/index.html
+++ b/stories/index.html
@@ -95,6 +95,7 @@
 <li class="toc"><a href="#persian">Persian [فارسی]</a></li><br>
 <li class="toc"><a href="#polish">Polish [Polski]</a></li><br>
 <li class="toc"><a href="#punjabi">Punjabi [ਪੰਜਾਬੀ]</a></li><br>
+<li class="toc"><a href="#romanian">Romanian [Română]</a></li><br>
 <li class="toc"><a href="#russian">Russian [Русский]</a></li><br>
 <li class="toc"><a href="#serbian">Serbian [Српски]</a></li><br>
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
@@ -4305,6 +4306,27 @@
 </table>
 
    </ul>
+  <h3><a name='romanian'>Romanian [Română]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/ro/0087_îmi-place-sa-citesc_slides.html" target="_blank">Îmi place sa citesc!</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ro0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
   <h3><a name='russian'>Russian [Русский]</a></h3>
    <ul><table>
   <thead>
@@ -6043,7 +6065,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#nn0087">nn</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#nn0087">nn</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
