--- a/stories/master.html
+++ b/stories/master.html
@@ -90,7 +90,7 @@
     </tr>
     <tr>
       <td>0004</td>
-      <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
+      <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog, and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
